--- a/Grappa_tutorial.ipynb
+++ b/Grappa_tutorial.ipynb
@@ -4,14 +4,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fast and Accurate EMRI Waveforms Tutorial"
+    "# Fast  EMRI Waveform Tutorial"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we provide a set of examples for creating EMRI waveforms as a whole; looking at separate creation pieces (trajectory, amplitude, summation, etc.); and creating your own module to build directly into this framework. For details on the specifics of our waveforms like constructions used and generally methodology, we refer you to our papers [arxiv.org/2104.04582](https://arxiv.org/abs/2104.04582) and [arxiv.org/2008.06071](https://arxiv.org/abs/2008.06071) and the [package documentation](https://bhptoolkit.org/FastEMRIWaveforms/). "
+    "Here you can find a pedagogical tutorial on creating Extreme Mass Ratio Inspiral (EMRI) waveforms. We will make an extensive use of the Fast EMRI Waveform (FEW) package [arxiv.org/2104.04582](https://arxiv.org/abs/2104.04582) [arxiv.org/2008.06071](https://arxiv.org/abs/2008.06071). The waveforms in this package combine a variety of separately accessible modules to form EMRI waveforms on both CPUs and GPUs. Generally, the modules fall into four categories: trajectory, amplitudes, summation, and utilities. Please see the [documentation](https://bhptoolkit.org/FastEMRIWaveforms/) for further information on these modules. The code and installation instructions can be found on Github [here](https://github.com/BlackHolePerturbationToolkit/FastEMRIWaveforms).\n",
+    "\n",
+    "In this tutorial will cover the basics of EMRI waveforms. In particular, we will understand:\n",
+    "1) What is an Extreme Mass Ratio Inspiral?\n",
+    "2) How is an EMRI Waveform built? What are the parameters of an EMRI Waveform?\n",
+    "3) EMRI Trajectory: \n",
+    "4) EMRI Amplitude and harmonic content\n",
+    "5) EMRI Waveform\n",
+    "6) How to modify a trajectory and build your own waveform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is an Extreme Mass Ratio Inspiral?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One of the primary sources for the future space-based gravitational wave detector, the Laser Interferometer Space Antenna, are the inspirals of small compact objects into massive black holes in the centers of galaxies. Such binaries are characterized by a small compact object of mass typically $\\mu\\in[1,100]M_\\odot$ (for example a solar-mass black hole or a neutron star) inspiralling around a Massive Black Hole (MBH) of mass $M\\in[10^5,10^6]M_\\odot$. Due to their particularly small mass ratio $\\epsilon = \\mu / M \\sim [10^{-4},10^{-6}]$ these systems are called Extreme Mass Ratio Inspiral (EMRI). Using perturbation theory in the mass ratio $\\epsilon$ it is possible to model the evolution of the orbit of the compact object. \n",
+    "\n",
+    "Below, in the let panel, we show an example of a small compact object of ten solar masses inspiraling around a spinning MBH of $10^6$ solar masses. The duration of the animation corresponds to 8 hours. In the right panel, you can see the gravitational wave signal emmitted during this inspiral."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video width=\"420\" height=\"340\" controls>\n",
+       "  <source src=\"EMRI_orbit.mp4\" type=\"video/mp4\">\n",
+       "</video>\n",
+       "<video width=\"420\" height=\"340\" controls>\n",
+       "  <source src=\"EMRI_waveform.mp4\" type=\"video/mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<video width=\"420\" height=\"340\" controls>\n",
+    "  <source src=\"EMRI_orbit.mp4\" type=\"video/mp4\">\n",
+    "</video>\n",
+    "<video width=\"420\" height=\"340\" controls>\n",
+    "  <source src=\"EMRI_waveform.mp4\" type=\"video/mp4\">\n",
+    "</video>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EMRI Waveforms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EMRI waveforms are represented by the complex time-domain dimensionless strain $h(t) = h_+ - ih_\\times$, where $h_+$ and $h_\\times$ are the normal transverse-traceless gravitational wave polarizations. At a large distance from the source, $h$ is given by [Drasco and Hughes 2006](https://arxiv.org/abs/gr-qc/0509101):\n",
+    "\\begin{equation}\\label{eq:main_wave}\n",
+    "    h = \\frac{\\mu}{d_L}\\sum_{lmkn} A_{lmkn}(t) \\, S_{lmkn}(\\theta,\\phi) \\, \\exp[-i\\Phi_{mkn}(t)],\n",
+    "\\end{equation}\n",
+    "where $t$ is the time of arrival of the gravitational wave at the solar system baricenter, $d_L$ is the luminosity distance, and $\\{l,m,k,n\\}$ are the indices describing the frequency-domain harmonic mode decomposition (or simply \"harmonic\" or \"mode\")."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are three important functions in the sum that needs to be caculated:\n",
+    "\n",
+    "1. The angular function $S_{lmkn}(\\theta,\\phi)$ which describes how the amplitude is modulated depending on the source-frame polar viewing angle $\\theta_S$, the source-frame azimuthal viewing angle $\\phi_S$.\n",
+    "\n",
+    "2. The amplitude $A_{lmkn}$ which quantifies the size of each harmonic $(l,m,k,n)$.\n",
+    "\n",
+    "3. The oscillatory part $\\exp[-i\\Phi_{mkn}(t)]$ which depends on the phase $\\Phi_{mkn}=m\\Phi_\\varphi + k \\Phi_\\theta + n\\Phi_r$, where the indices $l$, $m$, $k$, and $n$ label the orbital angular momentum, azimuthal, polar, and radial modes, respectively. The phases $\\Phi_{\\varphi,\\theta,r}$ given above are the integral over time of the orbit's fundamental frequencies: \n",
+    "\\begin{equation}\n",
+    "    \\Phi_{\\varphi,\\theta,r}=\\int_0^t dt'\\, \\Omega_{\\varphi, \\theta, r}(p(t'), e(t'), x_I(t')). \n",
+    "\\end{equation}\n",
+    "\n",
+    "Each mode (or harmonic) is characterized by the mode frequency $\\omega_{mkn}=m\\Omega_\\varphi + k \\Omega_\\theta + n \\Omega_r$ which is the derivative of the phase $\\Phi_{mkn}$. The frequencies $\\Omega_{r,\\theta,\\phi}$ describe the fundamental frequencies of a Kerr geodesic orbit and in the Newtonian limit they all converge to the Keplerian frequency. These frequencies are determined using the dimensionless spin of the MBH, $a$, and the quasi-Keplerian orbital parameters of $p$ (semi-latus rectum; hereafter separation), $e$ (eccentricity), and $\\cos{I} \\equiv x_I$ (cosine of the angle $I$ which describes the orbit's inclination from the equatorial plane). See [Hughes2021](https://ui.adsabs.harvard.edu/abs/2021PhRvD.103j4014H/abstract) for further discussion and more detailed definitions.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![FEW_map.pdf](FEW_map.pdf)"
    ]
   },
   {
@@ -161,14 +261,14 @@
    "source": [
     "# parameters\n",
     "M = 1e6\n",
-    "mu = 1e2\n",
+    "mu = 1e0\n",
     "p0 = 12.0\n",
     "e0 = 0.4\n",
     "theta = np.pi/3  # polar viewing angle\n",
     "phi = np.pi/4  # azimuthal viewing angle\n",
     "dt = 10.0\n",
     "\n",
-    "wave = few(M, mu, p0, e0, theta, phi, dt=dt, T=1.0)  #  assumes dt = 10.0 for max T = 1.0 year"
+    "wave = few(M, mu, p0, e0, theta, phi, dt=dt, T=1.0)  #  assumes dt = 10.0 seconds for max T = 1.0 year"
    ]
   },
   {
@@ -3724,7 +3824,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3738,7 +3838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
